@@ -11,6 +11,10 @@
 - if REPSYS_CONF is set, /etc/repsys.conf and ~/.repsys/config will not be
   readed anymore
 - added option -F to repsys ci to set a log message file
+- added option --strict to getsrpm to check if the revision provided
+  matches the package URL;
+- added boolean configuration option strict-revision in the submit
+  section, to allow forcing the use of --strict
 - the fix for the unreleased commits problem in the previous release was
   wrong, really fixed it
 - fixed the use of file:/// URLs when using just the package name
